--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -17,6 +17,7 @@ jobs:
         rust:
           - stable
           - nightly
+        fail-fast: false
     steps:
       - uses: actions/checkout@v2
         with:
@@ -39,6 +40,7 @@ jobs:
         rust:
           - stable
           - nightly
+        fail-fast: false
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
