--- a/plugins/actix-web/Cargo.toml
+++ b/plugins/actix-web/Cargo.toml
@@ -18,6 +18,7 @@ actix-service2 = { version = "2", package = "actix-service", optional = true }
 actix-web2 = { version = "2", default-features = false, optional = true, package = "actix-web" }
 actix-web3 = { version = "3", default-features = false, optional = true, package = "actix-web" }
 actix-web4 = { version = "4", default-features = false, optional = true, package = "actix-web" }
+mime_guess = { version = "2.0.4", default-features = false }
 parking_lot = ">=0.10, <0.13"
 serde_json = "1.0"
 once_cell = "1.4"
