--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -23,7 +23,7 @@ once_cell = "1.4"
 log = { version = "0.4", optional = true }
 mime = "0.3"
 parking_lot = { version = ">=0.10, <0.13", features = ["serde"] }
-pin-project = { version = "1.0", optional = true }
+pin-project-lite = { version = "0.2", optional = true }
 rust_decimal = { version = "1", optional = true }
 regex = "1.3"
 serde = { version = "1.0", features = ["derive", "rc"] }
@@ -46,7 +46,7 @@ indexmap = { version = "1.0", features = ["serde-1", "std"], optional = true }
 actix4 = ["actix-base", "actix-web4"]
 actix3 = ["actix-base", "actix-web3"]
 actix2 = ["actix-base", "actix-web2"]
-actix-base = ["v2", "pin-project"]
+actix-base = ["v2", "pin-project-lite"]
 actix3-validator = ["actix-web-validator2", "validator12"]
 actix4-validator = ["actix-web-validator3", "validator14"]
 
