--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "paperclip"
-version = "0.8.2"
+version = "0.9.0"
 edition = "2018"
 description = "OpenAPI tooling library for type-safe compile-time checked HTTP APIs"
 documentation = "https://paperclip-rs.github.io/paperclip/paperclip"
@@ -17,8 +17,8 @@ path = "src/bin/main.rs"
 required-features = ["cli"]
 
 [dependencies]
-paperclip-actix = { path = "plugins/actix-web", version = "0.6.2", optional = true }
-paperclip-core = { path = "core", version = "0.6.2" }
+paperclip-actix = { path = "plugins/actix-web", version = "0.7.0", optional = true }
+paperclip-core = { path = "core", version = "0.7.0" }
 paperclip-macros = { path = "macros", version = "0.6.3", optional = true }
 
 env_logger = { version = "0.8", optional = true }
@@ -40,8 +40,7 @@ url_dep = { version = ">=1.7,<3", package = "url" }
 thiserror = "1.0"
 anyhow = "1.0"
 once_cell = "1.4"
-openapiv3 = { version = "=1.0.2", optional = true }
-indexmap = { version = "1.0", features = ["serde-1", "std"], optional = true }
+openapiv3 = { version = "1.0.3", optional = true }
 
 [dev-dependencies]
 actix-rt1 = { version = "1.0", package = "actix-rt" }
@@ -83,7 +82,7 @@ cli = ["env_logger", "structopt", "git2", "v2", "codegen"]
 codegen = ["heck", "http", "log", "regex", "tinytemplate", "paperclip-core/codegen"]
 v2 = ["paperclip-macros/v2", "paperclip-core/v2"]
 # OpenAPI v2 to v3 support
-v3 = ["openapiv3", "indexmap", "v2", "paperclip-core/v3", "paperclip-actix/v3"]
+v3 = ["openapiv3", "v2", "paperclip-core/v3", "paperclip-actix/v3"]
 
 
 # Features for implementing traits for dependencies.
