--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "paperclip"
-version = "0.8.1"
+version = "0.8.2"
 edition = "2018"
 description = "OpenAPI tooling library for type-safe compile-time checked HTTP APIs"
 documentation = "https://paperclip-rs.github.io/paperclip/paperclip"
@@ -17,8 +17,8 @@ path = "src/bin/main.rs"
 required-features = ["cli"]
 
 [dependencies]
-paperclip-actix = { path = "plugins/actix-web", version = "0.6.1", optional = true }
-paperclip-core = { path = "core", version = "0.6.1" }
+paperclip-actix = { path = "plugins/actix-web", version = "0.6.2", optional = true }
+paperclip-core = { path = "core", version = "0.6.2" }
 paperclip-macros = { path = "macros", version = "0.6.3", optional = true }
 
 env_logger = { version = "0.8", optional = true }
@@ -40,7 +40,7 @@ url_dep = { version = ">=1.7,<3", package = "url" }
 thiserror = "1.0"
 anyhow = "1.0"
 once_cell = "1.4"
-openapiv3 = { version = "1.0.2", optional = true }
+openapiv3 = { version = "=1.0.2", optional = true }
 indexmap = { version = "1.0", features = ["serde-1", "std"], optional = true }
 
 [dev-dependencies]
