--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ url_dep = { version = ">=1.7,<3", package = "url" }
 thiserror = "1.0"
 anyhow = "1.0"
 once_cell = "1.4"
-openapiv3 = { version = "1.0.3", optional = true }
+openapiv3-paper = { version = "2.0", optional = true }
 
 [dev-dependencies]
 actix-rt1 = { version = "1.0", package = "actix-rt" }
@@ -82,7 +82,7 @@ cli = ["env_logger", "structopt", "git2", "v2", "codegen"]
 codegen = ["heck", "http", "log", "regex", "tinytemplate", "paperclip-core/codegen"]
 v2 = ["paperclip-macros/v2", "paperclip-core/v2"]
 # OpenAPI v2 to v3 support
-v3 = ["openapiv3", "v2", "paperclip-core/v3", "paperclip-actix/v3"]
+v3 = ["openapiv3-paper", "v2", "paperclip-core/v3", "paperclip-actix/v3"]
 
 
 # Features for implementing traits for dependencies.
