--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -38,7 +38,7 @@ actix-web-validator2 = { version = "2.2", optional = true, package = "actix-web-
 actix-web-validator3 = { version = "3.0", optional = true, package = "actix-web-validator" }
 validator12 = { version = "0.12", features = ["derive"], optional = true, package = "validator" }
 validator14 = { version = "0.14", features = ["derive"], optional = true, package = "validator" }
-openapiv3 = { version = "1.0.3", optional = true }
+openapiv3-paper = { version = "2.0", optional = true }
 
 [features]
 # actix-web support
@@ -55,7 +55,7 @@ nightly = ["paperclip-macros/nightly"]
 
 # OpenAPI support (v2 and codegen)
 v2 = ["paperclip-macros/v2"]
-v3 = ["v2", "openapiv3"]
+v3 = ["v2", "openapiv3-paper"]
 codegen = ["v2", "heck", "log"]
 uuid = ["uuid0"]
 uuid0 = ["uuid0_dep"]
