--- a/plugins/actix-web/Cargo.toml
+++ b/plugins/actix-web/Cargo.toml
@@ -20,7 +20,7 @@ actix-web4 = { version = "4", default-features = false, optional = true, package
 mime_guess = { version = "2.0.4", default-features = false }
 serde_json = "1.0"
 once_cell = "1.4"
-openapiv3 = { version = "1.0.3", optional = true }
+openapiv3-paper = { version = "2.0", optional = true }
 include_dir = { version = "0.7.2", optional = true }
 tinytemplate = { version = "1.1", optional = true }
 
@@ -30,6 +30,6 @@ actix3 = ["actix-web3", "actix-service1", "paperclip-core/actix3"]
 actix4 = ["actix-web4", "actix-service2", "paperclip-core/actix4"]
 nightly = ["paperclip-core/nightly"]
 normalize = []
-v3 = ["openapiv3", "paperclip-core/v3"]
+v3 = ["openapiv3-paper", "paperclip-core/v3"]
 swagger-ui = ["include_dir"]
 rapidoc = ["tinytemplate", "include_dir"]
