--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -18,6 +18,7 @@ actix-session = { version = "0", optional = true }
 actix-identity = { version = "0", optional = true }
 actix-files = { version = "0", optional = true }
 chrono = { version = "0.4", optional = true }
+jiff = { version = "0.1.5", optional = true }
 heck = { version = "0.4", optional = true }
 once_cell = "1.4"
 log = { version = "0.4", optional = true }
@@ -47,6 +48,7 @@ actix2 = ["actix-base", "actix-web2"]
 actix-base = ["v2", "pin-project-lite"]
 actix3-validator = ["actix-web-validator2", "validator12"]
 actix4-validator = ["actix-web-validator3", "validator14"]
+jiff01 = ["jiff"]
 
 # Enable nightly if nightly compiler can be allowed
 nightly = ["paperclip-macros/nightly"]
