--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ paperclip-macros = { path = "macros", version = "0.7.0", optional = true }
 paperclip-codegen = { path = "codegen", version = "0.1.0", optional = true }
 
 env_logger = { version = "0.8", optional = true }
-git2 = { version = "0.15", optional = true }
+git2 = { version = "0.15", default-features = false, optional = true }
 heck = { version = "0.4", optional = true }
 http = { version = "0.2", optional = true }
 itertools = "0.10"
